kubernetes/apps/security/authentik/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authentik
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Authentik"
    gethomepage.dev/description: "Identity provider and SSO"
    gethomepage.dev/group: "Security"
    gethomepage.dev/icon: "authentik.png"
spec:
  hostnames: ["auth.${SECRET_DOMAIN}"]
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: authentik-server
          port: 9000
